# pronunciation-mapper

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  README-EN.md  README.md  index.html  pyproject.toml  requirements.txt  run_test.py  setup.py  styles.css
.github/workflows/: ci.yml  foundry-live.yml  pypi-publish.yml
docs/: CI_SETUP.md  PYPI_RELEASE.md  README.md  V2_ARCHITECTURE.md  index.html  script.js
docs/decisions/: 0001-bounded-candidate-agent.md  0002-foundry-default-provider-routing.md  0003-exact-eval-and-oidc-live-gate.md  README.md
docs/releases/: v2.0.0.md  v2.0.1.md
evals/: cases.jsonl  run_v2.py  vocabulary.json
examples/: db_terms.json  v2_quickstart.py
pronunciation_mapper/: __init__.py  __main__.py  cli.py  config.py  mapper.py  utils.py
pronunciation_mapper/v2/: __init__.py  candidates.py  engine.py  errors.py  models.py  prompts.py
pronunciation_mapper/v2/providers/: __init__.py  azure_foundry.py  base.py  factory.py  ollama.py
scripts/: validate_docs.py
tests/: aa.py  bb.py  custom_mappings.py  integration_with_asr.py  test_advanced.py  test_eval_runner.py  test_foundry_live.py  test_mapper.py  test_numbers.py  test_package_metadata.py  test_using_as_lib.py  test_v2.py  test_v2_providers.py
